test/Runner/errors/tests/MI/TestSuite/Init.ts.js
mi("Suite", () => {
	suite("Any", () => {
		throw new Error();
	})
});